objects/Cvent_Asset__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Purchase_Cost__c</fullName>
        <label>Actual Purchase Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Asset_Name__c</fullName>
        <label>Asset Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Tag__c</fullName>
        <description>Represents the physical barcode on the device. Will be the unique identifier when we scan Assets in and out of the inventory.</description>
        <externalId>true</externalId>
        <inlineHelpText>Represents the physical barcode on the device. Will be the unique identifier when we scan Assets in and out of the inventory.</inlineHelpText>
        <label>Asset Tag</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Cellular_Carrier__c</fullName>
        <label>Cellular Carrier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Functioning</fullName>
                    <default>true</default>
                    <label>Functioning</label>
                </value>
                <value>
                    <fullName>Out - Maintenance</fullName>
                </value>
                <value>
                    <fullName>Out - Testing</fullName>
                </value>
                <value>
                    <fullName>Out - Broken</fullName>
                </value>
                <value>
                    <fullName>Out - Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_of_Manufacture__c</fullName>
        <label>Country of Manufacture</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customs_Value__c</fullName>
        <label>Customs Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cvent_Asset_Type__c</fullName>
        <label>Cvent Asset Type</label>
        <referenceTo>Cvent_Asset_Type__c</referenceTo>
        <relationshipLabel>Cvent Assets</relationshipLabel>
        <relationshipName>Cvent_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Inventoried__c</fullName>
        <label>Date Inventoried</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Depreciated_Value__c</fullName>
        <formula>Market_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Depreciated Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_of_Life_Date__c</fullName>
        <label>End of Life Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hard_Drive_Size__c</fullName>
        <label>Hard Drive Size</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMEI__c</fullName>
        <label>IMEI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_Asset_Tag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kit Asset Tag</label>
        <referenceTo>Cvent_Asset__c</referenceTo>
        <relationshipLabel>Cvent Assets</relationshipLabel>
        <relationshipName>Cvent_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Current__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Location - Current</label>
        <referenceTo>Cvent_Warehouse__c</referenceTo>
        <relationshipLabel>Cvent Assets</relationshipLabel>
        <relationshipName>Cvent_Assets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Home__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Location - Home</label>
        <referenceTo>Cvent_Warehouse__c</referenceTo>
        <relationshipLabel>Cvent Assets (Location - Home)</relationshipLabel>
        <relationshipName>Cvent_Assets1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MAC_Address__c</fullName>
        <label>MAC Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Value__c</fullName>
        <label>Market Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Model_Description__c</fullName>
        <label>Model Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Model_Number__c</fullName>
        <label>Model Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OS_Name__c</fullName>
        <label>OS Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OS_Version__c</fullName>
        <label>OS Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Vendor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cvent Assets</relationshipLabel>
        <relationshipName>Cvent_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RAM__c</fullName>
        <label>RAM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacement_Cost__c</fullName>
        <label>Replacement Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SIM_Number__c</fullName>
        <label>SIM Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>Deployed</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Expiration_Date__c</fullName>
        <label>Warranty Expiration Date</label>
        <type>Date</type>
    </fields>
    <description>This object stores records of all the Cvent Assets that can be used at a Cent managed Event.</description>
    <label>Cvent Asset</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Cvent Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cvent Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Asset_Name__c</columns>
        <columns>Asset_Tag__c</columns>
        <columns>Cvent_Asset_Type__c</columns>
        <columns>Location_Current__c</columns>
        <columns>Status__c</columns>
        <columns>IMEI__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Market_Value__c</columns>
        <columns>Model_Number__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>SIM_Number__c</columns>
        <columns>Condition__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Windows_Laptops</fullName>
        <columns>NAME</columns>
        <columns>Asset_Name__c</columns>
        <columns>Asset_Tag__c</columns>
        <columns>Cvent_Asset_Type__c</columns>
        <columns>IMEI__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cvent_Asset_Type__c</field>
            <operation>contains</operation>
            <value>Windows Laptop</value>
        </filters>
        <label>All Windows Laptops</label>
    </listViews>
</CustomObject>